# cpp_template_workspace

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
include/: my_project.h
tests/: CMakeLists.txt  test_main.cpp
